--- a/src/_includes/css/navbar.css
+++ b/src/_includes/css/navbar.css
@@ -3,7 +3,7 @@ header {
 }
 
 .navbar {
-  width: 100vw;
+  width: 100%;
   height: 3.5rem;
   display: flex;
   background: #1118;
